kubernetes/apps/home-services/navidrome/navidrome.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: navidrome
    app.kubernetes.io/name: navidrome
  name: navidrome
  namespace: home-services
spec:
  ports:
    - name: http
      port: 4533
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/instance: navidrome
    app.kubernetes.io/name: navidrome
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/target: external.mjwood.org
  labels:
    app.kubernetes.io/instance: navidrome
    app.kubernetes.io/name: navidrome
  name: navidrome
  namespace: home-services
spec:
  ingressClassName: external
  rules:
    - host: music.mjwood.org
      http:
        paths:
          - backend:
              service:
                name: navidrome
                port:
                  number: 4533
            path: /
            pathType: Prefix
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: navidrome
    app.kubernetes.io/name: navidrome
  name: navidrome
  namespace: home-services
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: navidrome
      app.kubernetes.io/name: navidrome
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: navidrome
        app.kubernetes.io/name: navidrome
    spec:
      containers:
        - image: docker.io/deluan/navidrome:latest
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: http
            timeoutSeconds: 1
          name: navidrome
          ports:
            - containerPort: 4533
              name: http
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: http
            timeoutSeconds: 1
          volumeMounts:
            - mountPath: /data
              name: data
            - mountPath: /music
              name: navidrome-media
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: navidrome-data
        - emptyDir: {}
          name: media
        - name: navidrome-media
          persistentVolumeClaim:
            claimName: navidrome-media
